force-app/main/default/objects/DI_IdeaSubscription__c/DI_IdeaSubscription__c.object-meta.xml
<CustomObject>
    <label>IdeaSubscription</label>
    <nameField>
        <label>IdeaSubscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdeaSubscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>