force-app/main/default/objects/DI_IdeaSubscription__c/fields/DI_LineOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>DI_LineOfBusiness__c</fullName>
    <label>LineOfBusiness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Consumer Relationship</fullName>
            </value>
            <value>
                <fullName>Money Movement</fullName>
            </value>
            <value>
                <fullName>Platform Solutions</fullName>
            </value>
            <value>
                <fullName>Retail Banking</fullName>
            </value>
            <value>
                <fullName>Theme Idea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>