force-app/main/default/objects/DI_IdeaSubscription__c/fields/DI_SubscriptionCategory__c.field-meta.xml
<CustomField>
    <fullName>DI_SubscriptionCategory__c</fullName>
    <label>SubscriptionCategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH and Wires</fullName>
            </value>
            <value>
                <fullName>Admin Platform User Management and Security</fullName>
            </value>
            <value>
                <fullName>Alerts</fullName>
            </value>
            <value>
                <fullName>Authentication &amp; Settings</fullName>
            </value>
            <value>
                <fullName>Bill Pay</fullName>
            </value>
            <value>
                <fullName>Branding and Flexibility</fullName>
            </value>
            <value>
                <fullName>Check/Deposit Imaging</fullName>
            </value>
            <value>
                <fullName>Create Your Own/SSO and API Integration</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Deposit Accounts</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>DI Labs</fullName>
            </value>
            <value>
                <fullName>End User Support</fullName>
            </value>
            <value>
                <fullName>Entitlements</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>External Funds Transfer</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>General Admin Platform</fullName>
            </value>
            <value>
                <fullName>General Business Banking</fullName>
            </value>
            <value>
                <fullName>General Digital Banking</fullName>
            </value>
            <value>
                <fullName>General Payments</fullName>
            </value>
            <value>
                <fullName>Idea Exchange</fullName>
            </value>
            <value>
                <fullName>Industry Research</fullName>
            </value>
            <value>
                <fullName>Interfaces</fullName>
            </value>
            <value>
                <fullName>Money Management</fullName>
            </value>
            <value>
                <fullName>Online Account Opening</fullName>
            </value>
            <value>
                <fullName>Online Statements</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Accounts</fullName>
            </value>
            <value>
                <fullName>Pop Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>