force-app/main/default/objects/DI_IdeaSubscription__c/fields/DI_UserId__c.field-meta.xml
<CustomField>
    <fullName>DI_UserId__c</fullName>
    <description>Field to store user&apos;s Id who subscribed for Emails</description>
    <label>UserId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>