force-app/main/default/objects/DI_IdeaSubscription__c/fields/DI_UserName__c.field-meta.xml
<CustomField>
    <fullName>DI_UserName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserName</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IdeaSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>